--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,11 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.json]
+indent_size = 2
+
+[*.lua]
+quote_type = single
+
 [*.nix]
 indent_size = 2
