--- a/.editorconfig
+++ b/.editorconfig
@@ -8,17 +8,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.json]
+[*.{json,md,nix,yml}]
 indent_size = 2
 
 [*.lua]
 quote_type = single
-
-[*.md]
-indent_size = 2
-
-[*.nix]
-indent_size = 2
-
-[*.yml]
-indent_size = 2
